--- a/index.html
+++ b/index.html
@@ -1,7 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Bootstrap Django</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- Navbar================================================== -->
+<div id="large-nav" >
+    <!-- <div class="logo" class="left">
+      <a class="brand" href="">
+        <span>Jeremy Klein</span>
+      </a>
+    </div> -->
+    <div id="main-nav" class="">
+        <div class="main-nav-inner">
+            <ul class="main-nav-list">
+
+                <li class="link"><a href="/" title="Home">Home</a></li>
+
+                <li class="link"><a href="pages/code.html" title="Code">Code</a></li>
+
+                <li class="link"><a href="pages/music.html" title="Music And Sound Design">Music</a></li>
+
+                <!--<li class="link"><a href="/contact/" title="Contact">Contact</a></li>-->
+
+            </ul>
+        </div>
+        <div class="social-nav" class="right">
+            <ul class="social">
+                <li class="github">
+                    <a href="http://www.github.com/jeremyk23">
+                        <!--<strong>Github</strong>-->
+                    </a>
+                </li>
+                <li class="twitter">
+                    <a href="http://twitter.com/jeremyk9123">
+                        <!--<strong>Twitter</strong>-->
+                    </a>
+                </li>
+                <li class="linkedin">
+                    <a href="www.linkedin.com/pub/jeremy-klein/41/3a8/200/">
+                        <!--<strong>Twitter</strong>-->
+                    </a>
+                </li>
+                <li class="soundcloud">
+                    <a href="https://soundcloud.com/jeremy-klein-lair23">
+                        <!--<strong>Twitter</strong>-->
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+</header>
+<!-- Home page ================================================== -->
+<div id="home-page">
+    <div id="intro-bkg">
+        <div class="container-fluid">
+            <section id="intro" class="nav-padding">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div id="intro-spacer"></div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span6 span-center">
+                        <div id="intro-name"><h1>Jeremy Klein</h1></div>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span-center">
+                        <div id="intro-copy" class="">
+                            <p class="intro-copy whitetxt">Hi there. I am an iOS developer from Portland Oregon. I occasionally like to dabble in sound design and composition for film and video games.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div id="intro-arrow" class="non-tablet-mobile" onclick="goToByScroll('featured-work-bkg');"></div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
