Fixed music page link

--- a/pages/code.html
+++ b/pages/code.html
@@ -27,7 +27,7 @@
 
                 <li class="link"><a href="code.html" title="Code">Code</a></li>
 
-                <li class="link"><a href="music.html/" title="Music And Sound Design">Music</a></li>
+                <li class="link"><a href="music.html" title="Music And Sound Design">Music</a></li>
 
                 <!--<li class="link"><a href="/contact/" title="Contact">Contact</a></li>-->
 
