--- a/pages/code.html
+++ b/pages/code.html
@@ -143,7 +143,7 @@
                                     <h4>Web Development<a style="padding-left: 10px"
                                                              href="https://github.com/jeremyk23/Foursquare-Venue-Console"><img
                                             width="25px" src="../assets/GitHub-Mark-64px.png"></a></h4>
-                                    <p>I started with the <a href="www.madetogether.com.au">Made Together</a>
+                                    <p>I started with the <a href="http://www.madetogether.com.au" target="_newtab">Made Together</a>
                                         site as an inspirational base and went from there.</p>
                                 </div>
                             </div>
