--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main-nav-inner">
             <ul class="main-nav-list">
 
-                <li class="link"><a href="/" title="Home">Home</a></li>
+                <li class="link"><a href="index.html" title="Home">Home</a></li>
 
                 <li class="link"><a href="pages/code.html" title="Code">Code</a></li>
 
