--- a/pages/music.html
+++ b/pages/music.html
@@ -58,10 +58,11 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-video col-md-7 nopadding'>
-                                    <iframe width="560" height="315" src="//www.youtube.com/embed/GPAIAF95a_E?rel=0" frameborder="0" allowfullscreen></iframe>
+                                <div class = 'media-div-video dark-blue col-md-12'>
+                                    <iframe width="560" height="349"
+                                            src="//www.youtube.com/embed/GPAIAF95a_E?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
-                                <div class="media-post-video col-md-4">
+                                <div class="media-post-video col-md-12">
                                     <h2>Appsomniacs: Crash Cart</h2>
                                     <h4>Music And Sound Design</h4>
                                     <a href="https://itunes.apple.com/us/app/crash-cart/id665173771?mt=8"><img src="../assets/Download_on_the_App_Store_Badge_US-UK_135x40.svg"></a>
@@ -75,10 +76,10 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-video col-md-7 nopadding'>
+                                <div class = 'media-div-video maroon col-md-12'>
                                     <iframe width="560" height="315" src="//www.youtube.com/embed/YuWHF7cSLfU?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
-                                <div class="media-post-video col-md-4">
+                                <div class="media-post-video col-md-12">
                                     <h2>Rayman Origins: Trailer Music And Sound Replacement</h2>
                                     <h4>Music And Sound Design</h4>
                                 </div>
@@ -95,52 +96,53 @@
 
                 <div class="row-fluid">
                     <div class="span-center">
-                        <div class="media-panel">
-                            <div class="media-boundingbox">
-                                <div class = 'media-div col-sm-4 col-md-3 col-lg-3 nopadding'>
-                                    <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/167615474&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-
-                                </div>
-                                <div class="media-post col-sm-8 col-md-9 col-lg-9">
-                                    <h2>Jeremy Klein & Spencer Linn: Dingodile</h2>
-                                    <h4>Composition, MIDI Programming, Mixing and Mastering</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row-fluid">
-                    <div class="span-center">
-                        <div class="media-panel">
-                            <div class="media-boundingbox">
-                                <div class = 'media-div col-sm-4 col-md-3 col-lg-3 nopadding'>
-                                    <!-- <img class='media-img' src="../assets/LinkedIn-InBug-2CRev.png"> -->
-                                    <iframe style="border: 0; width: 250px; height: 250px;" src="http://bandcamp.com/EmbeddedPlayer/album=3011924875/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="http://theodious.com/album/joint-ventures">Joint Ventures by The Odious</a></iframe>
-
-                                </div>
-                                <div class="media-post col-sm-8 col-md-9 col-lg-9">
-                                    <h2>The Odious: Joint Ventures (Album)</h2>
-                                    <h4>Recording, Mixing, Mastering, And Drum Programming</h4>
+                        <div class="col-md-4">
+                            <div class="media-panel">
+                                <div class="media-boundingbox">
+                                    <div class = 'media-div-sound dark-blue'>
+                                        <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/167615474&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                                    </div>
+                                    <!--Nested column-->
+                                    <div class="media-post-sound col-md-12">
+                                        <h2>Jeremy Klein & Spencer Linn: Dingodile</h2>
+                                        <h4>Composition, MIDI Programming, Mixing and Mastering</h4>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="row-fluid">
-                    <div class="span-center">
-                        <div class="media-panel">
-                            <div class="media-boundingbox">
-                                <div class = 'media-div col-sm-4 col-md-3 col-lg-3 nopadding'>
-                                    <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/39891221&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                                </div>
-                                <div class="media-post col-sm-8 col-md-9 col-lg-9">
-                                    <h2>Jeremy Klein: Mysterio</h2>
-                                    <h4>Keyboard, MIDI Programming, Mixing and Mastering</h4>
+                        <div class="col-md-4">
+                            <div class="media-panel">
+                                <div class="media-boundingbox">
+                                    <div class="media-div-sound maroon">
+                                    <iframe width="250px" height="250px" scrolling="no" frameborder="no"
+                                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/178522869&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                                        </div>
+                                    <!--Nested column-->
+                                    <div class="media-post-sound col-md-12">
+                                        <h2>The Odious: Joint Ventures (Album)</h2>
+                                        <h4>Recording, Mixing, Mastering, And Drum Programming</h4>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-md-4">
+                            <div class="media-panel">
+                                <div class="media-boundingbox">
+                                    <div class = 'media-div-sound gettysburg-beige'>
+                                        <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/39891221&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                                    </div>
+                                    <!--Nested column-->
+                                    <div class="media-post-sound col-md-12">
+                                        <h2>Jeremy Klein
+                                            <br> Mysterio</h2>
+                                        <h4>Keyboard, MIDI Programming, Mixing and Mastering</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
@@ -154,10 +156,11 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-video col-md-7 nopadding'>
-                                    <iframe width="560" height="315" src="//www.youtube.com/embed/I-nILaqYZcs" frameborder="0" allowfullscreen></iframe>
+                                <div class = 'media-div-video gettysburg-beige col-md-12'>
+                                    <iframe width="560" height="349" src="//www.youtube.com/embed/I-nILaqYZcs"
+                                            frameborder="0" allowfullscreen></iframe>
                                 </div>
-                                <div class="media-post-video col-md-4">
+                                <div class="media-post-video col-md-12">
                                     <h2>California Guitar Trio Cover: Original Drums</h2>
                                     <h4>Drumming, Recording</h4>
                                 </div>
@@ -170,10 +173,10 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-video col-md-7 nopadding'>
+                                <div class = 'media-div-video maroon col-md-12'>
                                     <iframe width="560" height="315" src="//www.youtube.com/embed/3C24mJgNyP8" frameborder="0" allowfullscreen></iframe>
                                 </div>
-                                <div class="media-post-video col-md-4">
+                                <div class="media-post-video col-md-12">
                                     <h2>Jeremy Klein: Original Composition</h2>
                                     <h4>Keyboard, Drumming, Recording</h4>
                                 </div>
@@ -186,10 +189,10 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-video col-md-7 nopadding'>
+                                <div class = 'media-div-video dark-blue col-md-12'>
                                     <iframe width="560" height="315" src="//www.youtube.com/embed/m--Vu7LNJa0" frameborder="0" allowfullscreen></iframe>
                                 </div>
-                                <div class="media-post-video col-md-4">
+                                <div class="media-post-video col-md-12">
                                     <h2>The Odious: Contemplating Utopia</h2>
                                     <h4>Drumming, Recording</h4>
                                 </div>
