--- a/pages/code.html
+++ b/pages/code.html
@@ -57,27 +57,15 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div col-sm-4 col-md-3 col-lg-3 nopadding'>
-                                    <img width="250px"
-                                         src="../assets/Sticker_Main_with_phone.png">
+                                <div class = 'media-div-image dark-blue col-md-12'>
+                                    <img class="img-responsive" src="../assets/StickerPhoto@2x.png">
                                 </div>
-                                <div class="media-post-code col-sm-8 col-md-9 col-lg-9">
+                                <div class="media-post-video col-md-12">
                                     <h2>Sticker</h2>
                                     <h4>iOS and Web Development</h4>
                                     <p>Sticker is an app that aggregates <strong>professional</strong> reviews
                                         reviews for restaurants. In short, it is the Metacritic for the restaurant
                                         industry. This project is currently in development.</p>
-                                </div>
-                                <div class="media-post-code col-sm-8 col-md-9 col-lg-9">
-                                    <img class="sticker-image" width="250px"
-                                         src="../assets/Sticker_Add_Photo.png">
-                                    <img class="sticker-image" width="250px"
-                                         src="../assets/Sticker_Review.png">
-                                    <!--<img class="sticker-image" width="250px"-->
-                                    <!--src="../assets/Sticker_Modal.png">-->
-                                    <p>In addition to building the iPhone app, I also built a robust admin
-                                        interface for editors to add content such as reviews, restaurant photos,
-                                        and awards</p>
                                 </div>
                             </div>
                         </div>
@@ -87,12 +75,12 @@
                 <div class="row-fluid">
                     <div class="span-center">
                         <div class="media-panel">
-                            <div class="media-boundingbox media-boundingbox-code">
-                                <div class = 'media-div col-md-6 nopadding'>
-                                    <img width="500px"
+                            <div class="media-boundingbox">
+                                <div class = 'media-div-image dark-blue col-md-12'>
+                                    <img class="img-rounded img-responsive"
                                          src="../assets/Foursquare_Venue_Console.png">
                                 </div>
-                                <div class="media-post-code col-sm-8 col-md-6 col-lg-6">
+                                <div class="media-post-video col-md-12">
                                     <h2>Foursquare Venue Console</h2>
                                     <h4>Web Development<a style="padding-left: 10px"
                                                           href="https://github.com/jeremyk23/Foursquare-Venue-Console"><img
@@ -109,18 +97,19 @@
                 <div class="row-fluid">
                     <div class="span-center">
                         <div class="media-panel">
-                            <div class="media-boundingbox media-boundingbox-code">
-                                <div class = 'media-div col-md-6 nopadding'>
-                                    <img width="500px"
+                            <div class="media-boundingbox">
+                                <div class = 'media-div-image dark-blue col-md-12'>
+                                    <img class="img-rounded img-responsive"
                                          src="../assets/Jeremy_WebPage.png">
                                 </div>
-                                <div class="media-post-code col-sm-8 col-md-6 col-lg-6">
+                                <div class="media-post-video col-md-12">
                                     <h2>jeremyklein.co</h2>
                                     <h4>Web Development<a style="padding-left: 10px"
                                                           href="https://github.com/jeremyk23/Foursquare-Venue-Console"><img
                                             width="25px" src="../assets/GitHub-Mark-64px.png"></a></h4>
                                     <p>I started with the <a href="http://www.madetogether.com.au" target="_newtab">Made Together</a>
-                                        site as an inspirational base and went from there.</p>
+                                        site as an inspirational base and went from there. No templates were
+                                        used in the making of this site.</p>
                                 </div>
                             </div>
                         </div>
@@ -130,12 +119,12 @@
                 <div class="row-fluid">
                     <div class="span-center">
                         <div class="media-panel">
-                            <div class="media-boundingbox media-boundingbox-code">
-                                <div class = 'media-div col-md-6 nopadding'>
-                                    <img width="500px"
+                            <div class="media-boundingbox">
+                                <div class = 'media-div-image dark-blue col-md-12'>
+                                    <img class="img-rounded img-responsive"
                                          src="../assets/Sound_Platforming.png">
                                 </div>
-                                <div class="media-post-code col-sm-8 col-md-6 col-lg-6">
+                                <div class="media-post-video col-md-12">
                                     <h2>Sound Platforming</h2>
                                     <h4>Python development<a style="padding-left: 10px"
                                                              href="https://github.com/jeremyk23/Musical-Platformer"><img
@@ -149,6 +138,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="row-fluid">
                     <div class="span12">
                         <div id="intro-arrow" class="non-tablet-mobile" onclick="goToByScroll('featured-work-bkg');"></div>
