Added extra paragraph

--- a/pages/code.html
+++ b/pages/code.html
@@ -66,6 +66,9 @@
                                     <p>Sticker is an app that aggregates <strong>professional</strong> reviews
                                         reviews for restaurants. In short, it is the Metacritic for the restaurant
                                         industry. This project is currently in development.</p>
+                                    <p>In addition to building the iPhone app, I also built a robust admin
+                                        interface for editors to add content such as reviews, restaurant photos,
+                                        and awards</p>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +79,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image dark-blue col-md-12'>
+                                <div class = 'media-div-image maroon col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Foursquare_Venue_Console.png">
                                 </div>
@@ -98,7 +101,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image dark-blue col-md-12'>
+                                <div class = 'media-div-image gettysburg-beige col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Jeremy_WebPage.png">
                                 </div>
