Added Slideshare Link

--- a/pages/music.html
+++ b/pages/music.html
@@ -231,6 +231,11 @@
                 <!--<strong>Twitter</strong>-->
             </a>
         </li>
+        <li class="slideshare">
+                <a href="http://www.slideshare.net/jeremyk23">
+                    <!--<strong>Twitter</strong>-->
+                </a>
+            </li>
     </ul>
 </div>
 
