--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                 <!--<strong>Twitter</strong>-->
             </a>
         </li>
+        <li class="slideshare">
+            <a href="http://www.slideshare.net/jeremyk23">
+                <!--<strong>Twitter</strong>-->
+            </a>
+        </li>
     </ul>
 </div>
 
