--- a/pages/code.html
+++ b/pages/code.html
@@ -172,6 +172,11 @@
                     <!--<strong>Twitter</strong>-->
                 </a>
             </li>
+            <li class="slideshare">
+                <a href="http://www.slideshare.net/jeremyk23">
+                    <!--<strong>Twitter</strong>-->
+                </a>
+            </li>
         </ul>
     </div>
 </div>
