--- a/pages/code.html
+++ b/pages/code.html
@@ -81,6 +81,31 @@
                             <div class="media-boundingbox">
                                 <div class = 'media-div-image maroon col-md-12'>
                                     <img class="img-rounded img-responsive"
+                                         src="../assets/celebrememe-blog-post-header.png">
+                                </div>
+                                <div class="media-post-video col-md-12">
+                                    <h2> <a href="https://immense-fortress-3430.herokuapp.com/">UO Web
+                                        Dev Celebrememe Tutorial</a></h2>
+                                    <h4>Web Development<a style="padding-left: 10px"
+                                                          href="https://github.com/jeremyk23/Celebrememe-Tutorial"><img
+                                            width="25px" src="../assets/GitHub-Mark-64px.png"></a></h4>
+                                    <p>I wanted to introduce the University Of Oregon Web Development Club to
+                                        server side web development and working with API's in a fun,
+                                        approachable way. So I created a Flask app where a user enters a
+                                        celebrity and their last tweet is turned into a meme.</p>
+                                    <p>I am currently working on an in depth blog post for this tutorial.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span-center">
+                        <div class="media-panel">
+                            <div class="media-boundingbox">
+                                <div class = 'media-div-image gettysburg-beige col-md-12'>
+                                    <img class="img-rounded img-responsive"
                                          src="../assets/Foursquare_Venue_Console.png">
                                 </div>
                                 <div class="media-post-video col-md-12">
@@ -101,7 +126,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image gettysburg-beige col-md-12'>
+                                <div class = 'media-div-image dark-blue col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Jeremy_WebPage.png">
                                 </div>
@@ -123,7 +148,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image dark-blue col-md-12'>
+                                <div class = 'media-div-image maroon col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Sound_Platforming.png">
                                 </div>
