--- a/code/index.html
+++ b/code/index.html
@@ -1,43 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Jeremy Klein</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="../css/bootstrap.css" rel="stylesheet">
-    <link href="../css/custom.css" rel="stylesheet">
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-</head>
-
-<body>
-<!-- Navbar================================================== -->
-<div id="large-nav" >
-    <!-- <div class="logo" class="left">
-      <a class="brand" href="">
-        <span>Jeremy Klein</span>
-      </a>
-    </div> -->
-    <div id="main-nav" class="">
-        <div class="main-nav-inner">
-            <ul class="main-nav-list">
-
-                <li class="link"><a href="../index.html" title="Home">Home</a></li>
-
-                <li class="link"><a href="code.html" title="Code">Code</a></li>
-
-                <li class="link"><a href="music.html" title="Music And Sound Design">Music</a></li>
-
-                <!--<li class="link"><a href="/contact/" title="Contact">Contact</a></li>-->
-
-            </ul>
-        </div>
-    </div>
-</div>
-</div>
-</header>
-
+---
+title: Code
+layout: default
+---
 <div id='content-page'>
     <div id="intro-bkg">
         <div class="container-fluid">
@@ -81,31 +45,6 @@
                             <div class="media-boundingbox">
                                 <div class = 'media-div-image maroon col-md-12'>
                                     <img class="img-rounded img-responsive"
-                                         src="../assets/celebrememe-blog-post-header.png">
-                                </div>
-                                <div class="media-post-video col-md-12">
-                                    <h2> <a href="https://immense-fortress-3430.herokuapp.com/">UO Web
-                                        Dev Celebrememe Tutorial</a></h2>
-                                    <h4>Web Development<a style="padding-left: 10px"
-                                                          href="https://github.com/jeremyk23/Celebrememe-Tutorial"><img
-                                            width="25px" src="../assets/GitHub-Mark-64px.png"></a></h4>
-                                    <p>I wanted to introduce the University Of Oregon Web Development Club to
-                                        server side web development and working with API's in a fun,
-                                        approachable way. So I created a Flask app where a user enters a
-                                        celebrity and their last tweet is turned into a meme.</p>
-                                    <p>I am currently working on an in depth blog post for this tutorial.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row-fluid">
-                    <div class="span-center">
-                        <div class="media-panel">
-                            <div class="media-boundingbox">
-                                <div class = 'media-div-image gettysburg-beige col-md-12'>
-                                    <img class="img-rounded img-responsive"
                                          src="../assets/Foursquare_Venue_Console.png">
                                 </div>
                                 <div class="media-post-video col-md-12">
@@ -126,7 +65,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image dark-blue col-md-12'>
+                                <div class = 'media-div-image gettysburg-beige col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Jeremy_WebPage.png">
                                 </div>
@@ -148,7 +87,7 @@
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image maroon col-md-12'>
+                                <div class = 'media-div-image dark-blue col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/Sound_Platforming.png">
                                 </div>
@@ -175,39 +114,3 @@
             </section>
         </div>
     </div>
-    <div class="social-nav" class="right">
-        <ul class="social">
-            <li class="github">
-                <a href="http://www.github.com/jeremyk23">
-                    <!--<strong>Github</strong>-->
-                </a>
-            </li>
-            <li class="twitter">
-                <a href="http://twitter.com/jeremyk9123">
-                    <!--<strong>Twitter</strong>-->
-                </a>
-            </li>
-            <li class="linkedin">
-                <a href="www.linkedin.com/pub/jeremy-klein/41/3a8/200/">
-                    <!--<strong>Twitter</strong>-->
-                </a>
-            </li>
-            <li class="soundcloud">
-                <a href="https://soundcloud.com/jeremy-klein-lair23">
-                    <!--<strong>Twitter</strong>-->
-                </a>
-            </li>
-            <li class="slideshare">
-                <a href="http://www.slideshare.net/jeremyk23">
-                    <!--<strong>Twitter</strong>-->
-                </a>
-            </li>
-        </ul>
-    </div>
-</div>
-
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-</body>
-</html>
