fixed mobile view

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
                 <div class="row-fluid">
                     <div class="span-center">
                         <div id="intro-copy" class="">
-                            <p class="intro-copy whitetxt">Hi there. I am an iOS developer from Portland Oregon. I occasionally like to dabble in sound design and composition for film and video games.</p>
+                            <p class="intro-copy whitetxt">Hi there. I am a web and iOS developer from Portland Oregon. I occasionally like to dabble in sound design and composition for film and video games.</p>
                         </div>
                     </div>
                 </div>
