--- a/music/index.html
+++ b/music/index.html
@@ -60,7 +60,7 @@ layout: default
                 <div class="row-fluid">
                     <div class="span-center">
                         <div class="col-md-4">
-                            <div class="media-panel">
+                            <div class="media-panel col-panels">
                                 <div class="media-boundingbox">
                                     <div class = 'media-div-sound dark-blue'>
                                         <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/167615474&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
@@ -75,7 +75,7 @@ layout: default
                         </div>
 
                         <div class="col-md-4">
-                            <div class="media-panel">
+                            <div class="media-panel col-panels">
                                 <div class="media-boundingbox">
                                     <div class="media-div-sound maroon">
                                     <iframe width="250px" height="250px" scrolling="no" frameborder="no"
@@ -91,14 +91,14 @@ layout: default
                         </div>
 
                         <div class="col-md-4">
-                            <div class="media-panel">
+                            <div class="media-panel col-panels">
                                 <div class="media-boundingbox">
                                     <div class = 'media-div-sound gettysburg-beige'>
                                         <iframe width="250px" height="250px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/39891221&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                                     </div>
                                     <!--Nested column-->
                                     <div class="media-post-sound col-md-12">
-                                        <h2>Jeremy Klein
+                                        <h2>Jeremy Klein:
                                             <br> Mysterio</h2>
                                         <h4>Keyboard, MIDI Programming, Mixing and Mastering</h4>
                                     </div>
@@ -108,6 +108,7 @@ layout: default
 
                     </div>
                 </div>
+                <div class="clearfix visible-md-block"></div>
 
                 <div class="row-fluid">
                     <div class="span6 span-center">
