--- a/code/index.html
+++ b/code/index.html
@@ -46,28 +46,6 @@ layout: default
                     <div class="span-center">
                         <div class="media-panel">
                             <div class="media-boundingbox">
-                                <div class = 'media-div-image dark-blue col-md-12'>
-                                    <img class="img-responsive" src="../assets/StickerPhoto@2x.png">
-                                </div>
-                                <div class="media-post-video col-md-12">
-                                    <h2>Sticker</h2>
-                                    <h4>iOS and Web Development</h4>
-                                    <p>Sticker is an app that aggregates <strong>professional</strong> reviews
-                                        reviews for restaurants. In short, it is the Metacritic for the restaurant
-                                        industry. This project is currently in development.</p>
-                                    <p>In addition to building the iPhone app, I also built a robust admin
-                                        interface for editors to add content such as reviews, restaurant photos,
-                                        and awards</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row-fluid">
-                    <div class="span-center">
-                        <div class="media-panel">
-                            <div class="media-boundingbox">
                                 <div class = 'media-div-image maroon col-md-12'>
                                     <img class="img-rounded img-responsive"
                                          src="../assets/celebrememe-blog-post-header.png">
@@ -83,6 +61,29 @@ layout: default
                                         approachable way. So I created a Flask app where a user enters a
                                         celebrity and their last tweet is turned into a meme.</p>
                                     <p>The first part of the tutorial for this app can be viewed <a href="/blog/">here.</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span-center">
+                        <div class="media-panel">
+                            <div class="media-boundingbox">
+                                <div class = 'media-div-image dark-blue col-md-12'>
+                                    <img class="img-responsive" src="../assets/StickerPhoto@2x.png">
+                                </div>
+                                <div class="media-post-video col-md-12">
+                                    <h2>Sticker</h2>
+                                    <h4>iOS and Web Development</h4>
+                                    <p>Sticker is an app that aggregates <strong>professional</strong> reviews
+                                        reviews for restaurants. In short, it is the Metacritic for the restaurant
+                                        industry. This was an unreleased side project that gave me an excuse to
+                                        spend time reading restaurant reviews.</p>
+                                    <p>In addition to building the iPhone app, I also built a robust admin
+                                        interface for editors to add content such as reviews, restaurant photos,
+                                        and awards</p>
                                 </div>
                             </div>
                         </div>
